# xpatch

./: .gitattributes  .gitignore  CHANGELOG.md  Cargo.toml  DEVELOPMENT.md  LICENSE-COMMERCIAL.txt  README.md  axogen.ts  deny.toml  package.json  tsconfig.json
axogen/: metadata.ts  preferences.ts
axogen/commands/: build.ts  clean.ts  example.ts  howto.ts  index.ts  local.ts  setup.ts  test.ts
axogen/console/: themes.ts
axogen/targets/: docs.ts  index.ts  node.ts  python.ts  wasm.ts
axogen/templates/: DEVELOPMENT.md.njk  package.json.njk  pyproject.toml.njk  wasm-package.json.njk
axogen/utils/: index.ts  prompts.ts  tool-detection.ts
benches/: git_real_world.rs  stress.rs  stress_compared.rs
crates/xpatch/: README.md
crates/xpatch-c/: Cargo.toml  README.md  build.rs  cbindgen.toml
crates/xpatch-c/examples/: Makefile  basic.c
crates/xpatch-c/src/: lib.rs
crates/xpatch-node/: .gitignore  Cargo.toml  README.md  package-lock.json  package.json  test.js  test.ts
crates/xpatch-node/src/: lib.rs
crates/xpatch-python/: Cargo.toml  README.md  pyproject.toml
crates/xpatch-python/src/: lib.rs
crates/xpatch-wasm/: Cargo.toml  README.md  benchmark.js  package.json
crates/xpatch-wasm/examples/browser/: index.html
crates/xpatch-wasm/examples/node/: example.js
crates/xpatch-wasm/src/: lib.rs
crates/xpatch/examples/: tags.rs
crates/xpatch/src/: delta.rs  token_list.rs
crates/xpatch/test_results/: report_20251211_204655.json  report_20251211_205512.md
examples/: basic.rs
src/: delta.rs
test_results/: report_20251211_204655.md  report_20251211_205512.json
