[package]
name = "xpatch-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "WebAssembly bindings for the xpatch delta compression library"
repository.workspace = true
homepage.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
xpatch = { workspace = true }
wasm-bindgen = "0.2.99"
console_error_panic_hook = { version = "0.1.7", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.49"

[features]
default = ["console_error_panic_hook"]
